--- a/package.json
+++ b/package.json
@@ -17,7 +17,16 @@
   ],
   "author": "Jason Vermillion",
   "license": "MIT",
-  "devDependencies": {
-    "mocha": "^3.5.0"
-  }
+  "devDependencies": {},
+  "dependencies": {
+    "mocha": "^5.1.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jason-vermillion/jato-list.git"
+  },
+  "bugs": {
+    "url": "https://github.com/jason-vermillion/jato-list/issues"
+  },
+  "homepage": "https://github.com/jason-vermillion/jato-list#readme"
 }
